assets/css/app/settings.css
.settings-container {
  margin: 0 auto;
  padding: var(--spacing-md);
  max-width: 1200px;
  display: flex;
  flex-direction: column;
  gap: var(--spacing-md);
}

.settings-title {
  margin-bottom: var(--spacing-xl);
  font-size: var(--font-size-ui);
  font-weight: var(--font-weight-md);
  text-transform: uppercase;
  letter-spacing: 0.2rem;
}

.settings-section {
  margin-bottom: var(--spacing-md);
  padding: var(--spacing-xs) var(--spacing-md);
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  box-shadow: var(--in-shadow);
  border-radius: var(--border-radius);
}

.settings-wrap {
  width: 100%;
  padding: var(--spacing-xs) var(--spacing-md);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.settings-wrap input {
  padding: var(--spacing-xs);
  max-width: 350px;
  background-color: var(--bg-color);
  color: var(--text-color);
  box-shadow: var(--in-shadow);
}

.settings-img-wrap{
  position: relative;
  display: flex;
  border-radius: 50%;
  border: 4px solid var(--accent-color);
  overflow: hidden;
    cursor: pointer;
}

.settings-img {
  width: 150px;
  height: auto;
  display: flex;
  border-radius: 50%;
  overflow: hidden;
}

.settings-img-overlay{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: none;
  justify-content: center;
  align-items: center;
  background: #00000090;
  color: white;
  font-size: 4rem;
}

.settings-img-wrap:hover .settings-img-overlay{
  display: flex;
}

.preview-wrap {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: var(--spacing-xs);
}

#update-btn {
  margin: var(--spacing-md) 0;
  align-self: flex-start;
}

/* ==================== CUSTOM THEME SELECTOR ==================== */

.custom-select-wrapper {
  position: relative;
  max-width: 300px;
  width: 100%;
}

.custom-select {
  appearance: none;
  padding: var(--spacing-md);
  padding-right: var(--spacing-xl);
  width: 100%;
  background: var(--bg-color);
  color: var(--text-color);
  font-family: var(--font);
  font-size: var(--font-size-ui);
  outline: none;
  border: var(--border);
  border-radius: var(--border-radius);
  box-shadow: var(--in-shadow);
  cursor: pointer;
}

.custom-select:focus {
  border-color: var(--accent-color);
  box-shadow: var(--shadow);
}

.custom-select-wrapper i {
  position: absolute;
  right: var(--spacing-md);
  top: 50%;
  font-size: var(--font-size-ui);
  color: var(--accent-color);
  transform: translateY(-50%);
  pointer-events: none;
}

@media (max-width: 600px){
  #update-btn{
    margin: var(--spacing-md);
  }

  .settings-section{
    padding: 0;
  }

  .settings-wrap input{
    max-width: 200px;
  }
}

